<resources>
    <string name="app_name">Reddit Articles</string>
    <string name="top_articles">Top articles</string>
    <string name="author">Author</string>
    <string name="time">Time</string>
    <string name="source">Source</string>
    <string name="desc">Desc</string>
    <string name="title">Title</string>
    <string name="comments_num">Comments</string>
    <string name="check_internet">Check your internet</string>
    <string name="img_saved">"The image was saved in the gallery "</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>
</resources>