<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:transitionName="img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"/>
            
            <ImageView
                android:id="@+id/shadow_bottom"
                android:src="@drawable/bottom_shadow"
                android:layout_alignBottom="@id/img"
                android:layout_width="match_parent"
                android:layout_height="80dp"/>


            <FrameLayout
                android:id="@+id/layoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:background="@drawable/round_white"
                android:padding="5dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-50dp">

                <ImageView
                    android:src="@drawable/ic_date"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
                <TextView
                    android:id="@+id/publishedAt"
                    android:textColor="#606060"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:background="@drawable/round_white"
                android:padding="5dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-50dp">


                <TextView
                    android:id="@+id/comments_num"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/comments_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="#606060"
                    android:textStyle="bold"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/comments_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </FrameLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/title"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/img"
                android:id="@+id/title" />


            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/desc"
                />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/desc"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/author" />








        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>